--- a/packages/components/src/button/style/index.less
+++ b/packages/components/src/button/style/index.less
@@ -1,4 +1,4 @@
-.ea-button {
+.d-button {
   box-sizing: border-box;
   display: inline-block;
   padding: 12px 20px;
@@ -18,7 +18,7 @@
   appearance: none;
 }
 
-.ea-button.ea-button-primary {
+.d-button.d-button-primary {
   color: #fff;
   background-color: #409eff;
   border-color: #409eff;
