--- a/packages/components/src/button/style/index.less
+++ b/packages/components/src/button/style/index.less
@@ -18,7 +18,7 @@
   appearance: none;
 }
 
-.d-button.d-button-primary {
+.d-button.d-button--primary {
   color: #fff;
   background-color: #409eff;
   border-color: #409eff;
